# clip-factory

./: .dependency-cruiser.cjs  .env.example  .gitignore  .prettierignore  Brewfile  README.md  eslint.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  vitest.config.ts  vitest.workspace.ts
apps/worker/: .clip-factory-paid-calls.sqlite3  .importlinter  pyproject.toml
apps/worker/src/clip_factory/adapters/: __init__.py
apps/worker/src/clip_factory/application/: __init__.py  analyze_highlights.py  build_archive.py  build_crop_track.py  build_transcript_windows.py  cancel_job.py  check_model_access.py  cleanup_job.py  execute_analysis_child.py  execute_render_batch.py  generate_preview.py  health.py  preprocess_source.py  project_pipeline.py  reconcile_job.py  render_clip.py  transcribe_source.py  transcript_mapper.py  validate_local_source.py  verify_budget.py
apps/worker/src/clip_factory/composition/: __init__.py  paid_call.py  preprocess.py  settings.py  worker_container.py
apps/worker/src/clip_factory/domain/: __init__.py  cost.py  highlight.py  job_state.py  media.py  progress.py  redaction.py  reframe.py  render.py  (+4 more)
apps/worker/tests/: test_bootstrap.py
apps/worker/tests/application/: test_analyze_highlights_validation.py  test_build_archive.py  test_build_crop_track.py  test_build_transcript_windows.py  test_generate_preview.py  test_health.py  test_job_maintenance.py  test_project_pipeline.py  test_render_clip.py  test_transcribe_source.py  test_validate_local_source.py  test_verify_budget.py
apps/worker/tests/architecture/: test_import_boundaries.py
apps/worker/tests/composition/: test_paid_call.py  test_preprocess.py  test_settings.py  test_youtube_oauth_composition.py
apps/worker/tests/domain/: test_cost.py  test_cost_conformance.py  test_job_state.py  test_media.py  test_progress.py  test_redaction.py  test_reframe.py  test_render.py  test_render_spec.py  test_retry.py  test_source.py  test_transcript.py
apps/worker/tests/fakes/: youtube_publishing.py
apps/worker/tests/media/: assert_probe.py  test_media_pipeline.py
apps/worker/tests/ports/: test_analysis_child_input.py  test_paid_call_state.py
apps/worker/tests/smoke/: test_real_keychain_vault.py
(+889 files in other folders)
